@@ -8,25 +8,24 @@ import faang.school.projectservice.mapper.ProjectMapper;
 import faang.school.projectservice.model.Project;
 import faang.school.projectservice.model.ProjectStatus;
 import faang.school.projectservice.model.ProjectVisibility;
+import faang.school.projectservice.service.filter.ProjectFilter;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
-
     private final ProjectJpaRepository projectJpaRepository;
-
     private final ProjectMapper projectMapper;
 
+    private final List<ProjectFilter> projectFilters;
 
     public ProjectDto createProject(ProjectDto projectDto, long requestUserId) {
-        if(projectDto.getName().isEmpty() || projectDto.getDescription().isEmpty()){
-            throw new IllegalStateException("Projects name and description cannot be null");
-        }
         if (projectJpaRepository.existsByOwnerIdAndName( requestUserId, projectDto.getName() )) {
             throw new IllegalStateException( "User ID " + requestUserId + "is already a member of the team associated with the existing project." );
         }
@@ -39,54 +38,37 @@ public class ProjectService {
         return projectMapper.toDto( savedProject );
     }
 
-    public ProjectDto updateProject(long projectId, ProjectFilterDto filters, long requestUserId) {
-        Project project = projectJpaRepository.findById( projectId )
+    public ProjectDto updateProject(long projectId, ProjectDto projectDto, long requestUserId) {
+        Project existingProject = projectJpaRepository.findById( projectId )
                 .orElseThrow( () -> new EntityNotFoundException( "Project with id " + projectId + " does not exist" ) );
 
-        checkUserIsMemberOrThrowException( project, requestUserId );
+        checkUserIsMemberOrThrowException( existingProject, requestUserId );
 
-        project.setStatus( status != null ? status : project.getStatus() );
-        project.setDescription( description != null ? description : project.getDescription() );
+        projectMapper.updateEntityFromDto(projectDto, existingProject);
 
-        projectJpaRepository.save( project );
-        return projectMapper.toDto( project );
+        projectJpaRepository.save( existingProject );
+
+        return projectMapper.toDto( existingProject );
     }
 
-    public List<ProjectDto> findProjectsByName(String name, long requestUserId) {
+    public List<ProjectDto> findAllProjectsByFilters(ProjectFilterDto filters, long requestUserId) {
         List<Project> projectList = projectJpaRepository.findAll();
         if (projectList.isEmpty()) {
-            throw new EntityNotFoundException( "No projects found by name: " + name );
+            throw new EntityNotFoundException( "No projects found" );
         }
 
-        List<Project> filteredProjects = projectList.stream()
-                .filter( project -> project.getName().equals( name ) && (project.getVisibility().equals( ProjectVisibility.PUBLIC ) ||
-                        (project.getVisibility().equals( ProjectVisibility.PRIVATE ) &&
-                                isMember( project, requestUserId ))) )
-                .toList();
+        List<Project> filteredProjects = filterProjects(projectList,requestUserId);
+
+        Stream<Project> projectStream = filteredProjects.stream();
 
         if (filteredProjects.isEmpty()) {
-            throw new EntityNotFoundException( "No projects found by name: " + name + " and available to user ID:" + requestUserId );
+            throw new EntityNotFoundException( "No projects found available to user ID:" + requestUserId );
         }
-        return projectMapper.toDtoList( filteredProjects );
-    }
-
-    public List<ProjectDto> findProjectsByStatus(ProjectStatus status, long requestUserId) {
-        List<Project> projectList = projectJpaRepository.findAll();
-        if (projectList.isEmpty()) {
-            throw new EntityNotFoundException( "No projects found by status: " + status );
-        }
-
-        List<Project> filteredProjects = projectList.stream()
-                .filter( project -> project.getStatus().equals( status ) && (project.getVisibility().equals( ProjectVisibility.PUBLIC ) ||
-                        (project.getVisibility().equals( ProjectVisibility.PRIVATE ) &&
-                                isMember( project, requestUserId ))) )
-                .toList();
-
-        if (filteredProjects.isEmpty()) {
-            throw new EntityNotFoundException( "No projects found by status: " + status + " and available to user ID:" + requestUserId );
-        }
-
-        return projectMapper.toDtoList( filteredProjects );
+        return projectFilters.stream()
+                .filter(filter -> filter.isApplicable(filters))
+                .flatMap(filter -> filter.apply(projectStream, filters))
+                .map(projectMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     public List<ProjectDto> getAllProjects(long requestUserId) {
@@ -95,11 +77,7 @@ public class ProjectService {
             throw new EntityNotFoundException( "No projects found" );
         }
 
-        List<Project> filteredProjects = projectList.stream()
-                .filter( project -> project.getVisibility().equals( ProjectVisibility.PUBLIC ) ||
-                        (project.getVisibility().equals( ProjectVisibility.PRIVATE ) &&
-                                isMember( project, requestUserId )) )
-                .toList();
+        List<Project> filteredProjects = filterProjects(projectList, requestUserId);
 
         return projectMapper.toDtoList( filteredProjects );
     }
@@ -124,6 +102,14 @@ public class ProjectService {
         return project.getTeams().stream()
                 .flatMap( team -> team.getTeamMembers().stream() )
                 .anyMatch( teamMember -> teamMember.getUserId() == userId || project.getOwnerId() == userId);
+    }
+
+    private List<Project> filterProjects(List<Project> projects, long userId){
+        return projects.stream()
+              .filter( project -> (project.getVisibility().equals( ProjectVisibility.PUBLIC ) ||
+                        (project.getVisibility().equals( ProjectVisibility.PRIVATE ) &&
+                                isMember( project, userId ))) )
+              .toList();
     }
 
 }
